NIFI-12970: Generate documentation for Python processors